--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,7 @@
 .div {
   background: linear-gradient(120deg, #03a9f4, #f441a5, #ffeb3b, #03f403);
   display: flex;
+  font-weight: 600;
   justify-content: space-between;
   padding: 5px;
   width: 85rem;
