--- a/src/css/login.css
+++ b/src/css/login.css
@@ -21,10 +21,10 @@ html {
 body {
   align-items: center;
   background-image: url('img.jpeg');
-  background-size: cover;
+  /* background-size: cover; */
   display: flex;
   justify-content: center;
-
+  
   /* text-transform: uppercase; */
 }
 
